# discord-bot-template

./: .dockerignore  .env.template  Dockerfile  README.md  bot.py  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
cogs/: admin.py  commands.py  events.py  owner.py  tasks.py
helpers/: __init__.py  embeds.py  utilities.py
models/: __init__.py  guild.py  settings.py
utils/: utilities.py
views/: paginator.py
