[project]
name = "discord-bot-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.1",
    "beanie>=2.0.0",
    "disnake>=2.11.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
]
